Skeleton of StartReadingPage.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -451,6 +451,7 @@
   "more-reactions": "{remaining} more",
   "more-reactions-hidden": "{remaining} more hidden",
   "more-year": "More than a year ago",
+  "most-active-blogs": "Most active blogs",
   "must-not-empty": "Must not be empty",
   "must-single-english-word": "Must be a single English word",
   "mutual-friends": "Mutual friends",
