--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -451,6 +451,7 @@
   "more-reactions": "{remaining} więcej",
   "more-reactions-hidden": "{remaining} więcej ukrytych",
   "more-year": "Ponad rok temu",
+  "most-active-blogs": "Najbardziej aktywne blogi",
   "must-not-empty": "Nie może być puste",
   "must-single-english-word": "Musi być pojedynczym angielskim słowem",
   "mutual-friends": "Wspólni znajomi",
