New design of WelcomePage.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -270,7 +270,7 @@
   "female": "Female",
   "female-short": "f.",
   "filters": "Filters",
-  "find-more-people": "Find more people →",
+  "find-more-people": "Find more people",
   "fold": "Fold",
   "follow-comments": "Follow comments",
   "following-comments": "Following comments",
@@ -290,7 +290,6 @@
   "full-name": "Full name",
   "full-name-set": "Full name set",
   "gender": "Gender (choose or type anything)",
-  "go": "Go",
   "go-bottom": "Go to the bottom",
   "go-first-comment": "Go to the first comment",
   "go-last-comment": "Go to the last comment",
@@ -410,7 +409,6 @@
     "your-post": "your post"
   },
   "invalid-secret-code": "Invalid secret code",
-  "invitation-buttons": "<0>Create a new blog</0><1>or</1><2>Log in</2>",
   "italic": "Italic",
   "i-think-blog-hide": "I think, the blog <b>{name}</b> should be hidden.",
   "i-think-comment-hide": "I think, the comment \"{heading}\" should be hidden.",
@@ -528,6 +526,7 @@
     "waiting": "Operation is waiting"
   },
   "oppose": "Oppose",
+  "or": "Or",
   "original-deleted": "Original deleted {date}",
   "password": "Password",
   "password-changed": "Password changed",
@@ -1117,7 +1116,6 @@
   "welcome": "Welcome!",
   "whats-new": "What's new with you?",
   "where-from": "Where it comes from?",
-  "where-go": "Where do you want to go?",
   "where-look": "Where to look",
   "why-delete-blog": "Why are you deleting the blog? (optional)",
   "why-not-set-avatar": "<0>Haven't set an avatar yet?</0> Your avatar will make it easy for others to recognize you in discussions.",
