--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -270,7 +270,7 @@
   "female": "Kobieta",
   "female-short": "k.",
   "filters": "Filtry",
-  "find-more-people": "Znajdź więcej osób →",
+  "find-more-people": "Znajdź więcej osób",
   "fold": "Zwiń",
   "follow-comments": "Obserwuj komentarze",
   "following-comments": "Obserwowane komentarze",
@@ -290,7 +290,6 @@
   "full-name": "Imię i nazwisko",
   "full-name-set": "Pełne imię ustawione",
   "gender": "Płeć (wybierz lub wpisz cokolwiek)",
-  "go": "Idź",
   "go-bottom": "Przejdź na dół",
   "go-first-comment": "Przejdź do pierwszego komentarza",
   "go-last-comment": "Przejdź do ostatniego komentarza",
@@ -410,7 +409,6 @@
     "your-post": "Twój post"
   },
   "invalid-secret-code": "Nieprawidłowy kod tajny",
-  "invitation-buttons": "<0>Utwórz nowy blog</0><1>lub</1><2>Zaloguj się</2>",
   "italic": "Kursywa",
   "i-think-blog-hide": "Uważam, że blog <b>{name}</b> powinien zostać ukryty.",
   "i-think-comment-hide": "Myślę, że komentarz „{heading}” powinien zostać ukryty.",
@@ -528,6 +526,7 @@
     "waiting": "Operacja oczekuje"
   },
   "oppose": "Sprzeciwiać się",
+  "or": "Lub",
   "original-deleted": "Oryginał usunięty {date}",
   "password": "Hasło",
   "password-changed": "Hasło zmienione",
@@ -1117,7 +1116,6 @@
   "welcome": "Witaj!",
   "whats-new": "Co nowego u ciebie?",
   "where-from": "Skąd to pochodzi?",
-  "where-go": "Dokąd chcesz się udać?",
   "where-look": "Gdzie szukać",
   "why-delete-blog": "Dlaczego usuwasz blog? (opcjonalnie)",
   "why-not-set-avatar": "<0>Jeszcze nie ustawiłeś awatara?</0> Dzięki awatarowi łatwo cię rozpoznają w dyskusjach.",
