--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -270,7 +270,7 @@
   "female": "Женский",
   "female-short": "ж.",
   "filters": "Фильтры",
-  "find-more-people": "Найти ещё людей →",
+  "find-more-people": "Найти ещё людей",
   "fold": "Свернуть",
   "follow-comments": "Следить за комментариями",
   "following-comments": "Слежу за комментариями",
@@ -290,7 +290,6 @@
   "full-name": "Полное имя",
   "full-name-set": "Полное имя установлено",
   "gender": "Пол/гендер (выберите или напишите что угодно)",
-  "go": "→",
   "go-bottom": "Перейти вниз",
   "go-first-comment": "Перейти к первому комментарию",
   "go-last-comment": "Перейти к последнему комментарию",
@@ -410,7 +409,6 @@
     "your-post": "ваш пост"
   },
   "invalid-secret-code": "Неверный секретный код",
-  "invitation-buttons": "<0>Создать новый блог</0><1>или</1><2>Войти</2>",
   "italic": "Курсив",
   "i-think-blog-hide": "Я считаю, что блог <b>{name}</b> следует скрыть.",
   "i-think-comment-hide": "Я считаю, что комментарий \"{heading}\" следует скрыть.",
@@ -528,6 +526,7 @@
     "waiting": "Операция в состоянии ожидания"
   },
   "oppose": "Возражаю",
+  "or": "Или",
   "original-deleted": "Оригинал удалён {date}",
   "password": "Пароль",
   "password-changed": "Пароль изменён",
@@ -1117,7 +1116,6 @@
   "welcome": "Привет!",
   "whats-new": "Что у вас нового?",
   "where-from": "Откуда он взят?",
-  "where-go": "Куда вы хотите пойти?",
   "where-look": "Где искать",
   "why-delete-blog": "Почему вы удаляете блог? (необязательно)",
   "why-not-set-avatar": "<0>Ещё не установили аватарку?</0> По аватарке вас будет легко узнать в обсуждениях.",
