--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -270,7 +270,7 @@
   "female": "Жіночий",
   "female-short": "ж.",
   "filters": "Фільтри",
-  "find-more-people": "Знайти ще людей →",
+  "find-more-people": "Знайти ще людей",
   "fold": "Згорнути",
   "follow-comments": "Слідкувати за коментарями",
   "following-comments": "Слідкую за коментарями",
@@ -290,7 +290,6 @@
   "full-name": "Повне ім'я",
   "full-name-set": "Повне ім'я встановлено",
   "gender": "Пол/гендер (виберіть або напишіть що завгодно)",
-  "go": "→",
   "go-bottom": "Перейти донизу",
   "go-first-comment": "Перейти до першого коментаря",
   "go-last-comment": "Перейти до останнього коментаря",
@@ -410,7 +409,6 @@
     "your-post": "ваш пост"
   },
   "invalid-secret-code": "Невірний секретний код",
-  "invitation-buttons": "<0>Створити новий блог</0><1>або</1><2>Увійти</2>",
   "italic": "Курсив",
   "i-think-blog-hide": "Я вважаю, що блог <b>{name}</b> слід приховати.",
   "i-think-comment-hide": "Я вважаю, що коментар \"{heading}\" слід приховати.",
@@ -528,6 +526,7 @@
     "waiting": "Операція у стані очікування"
   },
   "oppose": "Заперечую",
+  "or": "Або",
   "original-deleted": "Оригінал видалений {date}",
   "password": "Пароль",
   "password-changed": "Пароль змінений",
@@ -1117,7 +1116,6 @@
   "welcome": "Вітаю!",
   "whats-new": "Що у вас нового?",
   "where-from": "Звідки його взято?",
-  "where-go": "Куди ви бажаєте піти?",
   "where-look": "Де шукати",
   "why-delete-blog": "Чому ви видаляєте блог? (за бажанням)",
   "why-not-set-avatar": "<0>Ще не встановили аватар?</0> По аватару вас буде легко впізнати в обговореннях.",
