--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -174,7 +174,7 @@
   "defrosting-message-box": "\uD83C\uDF89 <b>Мы очень рады снова видеть вас после столь долгого отсутствия!</b><br><br>Много замечательных вещей появилось в Moera с тех пор. Осмотритесь, пока ваша лента наполняется новыми постами.",
   "delete": "Удалить",
   "delete-account-moera": "Удалить мой аккаунт в Moera",
-  "delete-account-need-log-in": "Чтобы удалить свой аккаунт, вы должны в него",
+  "delete-account-need-log-in": "Чтобы удалить свой аккаунт, вам нужно авторизоваться",
   "delete-all-his-recommended": "Удалить все {gender, select, female {её} other {его}} рекомендованные посты",
   "delete-avatar": "Удалить аватарку?",
   "delete-blog": "Удалить мой блог",
