--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -174,7 +174,7 @@
   "defrosting-message-box": "\uD83C\uDF89 <b>Ми дуже раді знову бачити вас після такої тривалої відсутності!</b><br><br>Багато чудових речей з'явилося в Moera з того часу. Подивіться, поки ваша стрічка наповнюється новими постами.",
   "delete": "Видалити",
   "delete-account-moera": "Видалити мій аккаунт у Moera",
-  "delete-account-need-log-in": "Щоб видалити свій аккаунт, вам потрібно до нього",
+  "delete-account-need-log-in": "Щоб видалити свій акаунт, вам потрібно авторизуватися",
   "delete-all-his-recommended": "Видалити всі {gender, select, female {її} other {його}} рекомендовані пости",
   "delete-avatar": "Видалити аватар?",
   "delete-blog": "Видалити мій блог",
