Working search on WelcomePage.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -271,6 +271,7 @@
   "female-short": "f.",
   "filters": "Filters",
   "find-more-people": "Find more people",
+  "find-text-users": "Find text, users and more...",
   "fold": "Fold",
   "follow-comments": "Follow comments",
   "following-comments": "Following comments",
