--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -271,6 +271,7 @@
   "female-short": "k.",
   "filters": "Filtry",
   "find-more-people": "Znajdź więcej osób",
+  "find-text-users": "Znajdź tekst, użytkowników i więcej...",
   "fold": "Zwiń",
   "follow-comments": "Obserwuj komentarze",
   "following-comments": "Obserwowane komentarze",
