--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -271,6 +271,7 @@
   "female-short": "ж.",
   "filters": "Фильтры",
   "find-more-people": "Найти ещё людей",
+  "find-text-users": "Найти текст, пользователей и многое другое...",
   "fold": "Свернуть",
   "follow-comments": "Следить за комментариями",
   "following-comments": "Слежу за комментариями",
