--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -271,6 +271,7 @@
   "female-short": "ж.",
   "filters": "Фільтри",
   "find-more-people": "Знайти ще людей",
+  "find-text-users": "Знайти текст, користувачів та більше…",
   "fold": "Згорнути",
   "follow-comments": "Слідкувати за коментарями",
   "following-comments": "Слідкую за коментарями",
