Memoization error in StartReadingPage fixed. Visual improvements.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -991,6 +991,7 @@
   "subscribed": "Subscribed",
   "subscribed-to-me": "Subscribed to me",
   "subscribe-me": "Subscribe to me",
+  "subscribe-popular-blogs": "Subscribe to popular blogs",
   "subscribers": "Subscribers",
   "subscript": "Subscript",
   "subscriptions": "Subscriptions",
