--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -991,6 +991,7 @@
   "subscribed": "Zasubskrybowano",
   "subscribed-to-me": "Zasubskrybowano mnie",
   "subscribe-me": "Zasubskrybuj mnie",
+  "subscribe-popular-blogs": "Subskrybuj popularne blogi",
   "subscribers": "Subskrybenci",
   "subscript": "Indeks dolny",
   "subscriptions": "Subskrypcje",
