--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -991,6 +991,7 @@
   "subscribed": "{gender, select, female {Подписана} other {Подписан}}",
   "subscribed-to-me": "{gender, select, female {Подписана} other {Подписан}} на меня",
   "subscribe-me": "Подписаться на меня",
+  "subscribe-popular-blogs": "Подпишитесь на популярные блоги",
   "subscribers": "Подписчики",
   "subscript": "Подстрочный знак",
   "subscriptions": "Подписки",
