Simplified ShareDialog. Updated the set of social media icons.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -659,6 +659,7 @@
   "rotate-right": "Rotate right",
   "safe-search": "Safe search",
   "save": "Save",
+  "say-about-link": "Say something about this link (optional)…",
   "scope": {
     "add-comment": "Create comments signed by your name",
     "add-post": "Create posts signed by your name",
