--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -659,6 +659,7 @@
   "rotate-right": "Obróć w prawo",
   "safe-search": "Bezpieczne wyszukiwanie",
   "save": "Zapisz",
+  "say-about-link": "Powiedz coś o tym linku (opcjonalnie)…",
   "scope": {
     "add-comment": "Utwórz komentarze podpisane Twoim imieniem",
     "add-post": "Utwórz posty podpisane Twoim imieniem",
