--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -659,6 +659,7 @@
   "rotate-right": "Повернуть вправо",
   "safe-search": "Безопасный поиск",
   "save": "Сохранить",
+  "say-about-link": "Расскажите об этой ссылке (необязательно)…",
   "scope": {
     "add-comment": "Создавать комментарии, подписанные вашим именем",
     "add-post": "Создавать посты, подписанные вашим именем",
