--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -659,6 +659,7 @@
   "rotate-right": "Повернути праворуч",
   "safe-search": "Безпечний пошук",
   "save": "Зберегти",
+  "say-about-link": "Розкажіть про це посилання (необов'язково)…",
   "scope": {
     "add-comment": "Створювати коментарі, підписані вашим ім'ям",
     "add-post": "Створювати пости, підписані вашим ім'ям",
