Rename the secret code used when resetting password to "verification code".

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -253,8 +253,8 @@
   "enable-reactions": "Enable reactions",
   "enter-blog-name": "Enter blog name",
   "enter-name": "Enter name...",
-  "enter-secret-code": "Enter secret code",
   "enter-text-here": "Enter text here...",
+  "enter-verification-code": "Enter verification code",
   "expand": "Expand ↓",
   "expires": "Expires:",
   "explore": "Explore",
@@ -409,7 +409,7 @@
     "their-post": "{gender, select, male {his} female {her} other {their}} post",
     "your-post": "your post"
   },
-  "invalid-secret-code": "Invalid secret code",
+  "invalid-verification-code": "Invalid verification code",
   "italic": "Italic",
   "i-think-blog-hide": "I think, the blog <b>{name}</b> should be hidden.",
   "i-think-comment-hide": "I think, the comment \"{heading}\" should be hidden.",
@@ -703,7 +703,6 @@
     "people": "People",
     "postings": "Posts"
   },
-  "secret-code": "Secret code",
   "secret-words": "Secret Words",
   "select": "Select",
   "send": "Send",
@@ -1088,6 +1087,7 @@
   "user-comments-hidden": "This user's comments are hidden",
   "user-havent-posted-anything": "User haven't posted anything yet",
   "validating-access-request": "Validating access request",
+  "verification-code": "Verification code",
   "verify-signature": "Verify signature",
   "video": "Video",
   "video-internet": "Video from the Internet",
