--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -253,8 +253,8 @@
   "enable-reactions": "Włącz reakcje",
   "enter-blog-name": "Wpisz nazwę bloga",
   "enter-name": "Wpisz imię...",
-  "enter-secret-code": "Wprowadź kod tajny",
   "enter-text-here": "Wpisz tekst tutaj...",
+  "enter-verification-code": "Wprowadź kod weryfikacyjny",
   "expand": "Rozwiń ↓",
   "expires": "Wygasa:",
   "explore": "Odkrywaj",
@@ -409,7 +409,7 @@
     "their-post": "{gender, select, male {jego} female {jej} other {ich}} post",
     "your-post": "Twój post"
   },
-  "invalid-secret-code": "Nieprawidłowy kod tajny",
+  "invalid-verification-code": "Nieprawidłowy kod weryfikacyjny",
   "italic": "Kursywa",
   "i-think-blog-hide": "Uważam, że blog <b>{name}</b> powinien zostać ukryty.",
   "i-think-comment-hide": "Myślę, że komentarz „{heading}” powinien zostać ukryty.",
@@ -703,7 +703,6 @@
     "people": "Ludzie",
     "postings": "Posty"
   },
-  "secret-code": "Kod tajny",
   "secret-words": "Tajne słowa",
   "select": "Wybierz",
   "send": "Wyślij",
@@ -1088,6 +1087,7 @@
   "user-comments-hidden": "Komentarze tego użytkownika są ukryte",
   "user-havent-posted-anything": "Użytkownik jeszcze nic nie opublikował",
   "validating-access-request": "Weryfikacja żądania dostępu",
+  "verification-code": "Kod weryfikacyjny",
   "verify-signature": "Zweryfikuj podpis",
   "video": "Wideo",
   "video-internet": "Wideo z Internetu",
