--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -253,8 +253,8 @@
   "enable-reactions": "Дозволити реакції",
   "enter-blog-name": "Введіть ім'я блога",
   "enter-name": "Введіть ім'я...",
-  "enter-secret-code": "Введіть секретний код",
   "enter-text-here": "Введіть текст тут...",
+  "enter-verification-code": "Введіть код підтвердження",
   "expand": "Розгорнути ↓",
   "expires": "Придатний до:",
   "explore": "Огляд",
@@ -409,7 +409,7 @@
     "their-post": "свій пост",
     "your-post": "ваш пост"
   },
-  "invalid-secret-code": "Невірний секретний код",
+  "invalid-verification-code": "Недійсний код підтвердження",
   "italic": "Курсив",
   "i-think-blog-hide": "Я вважаю, що блог <b>{name}</b> слід приховати.",
   "i-think-comment-hide": "Я вважаю, що коментар \"{heading}\" слід приховати.",
@@ -703,7 +703,6 @@
     "people": "Люди",
     "postings": "Пости"
   },
-  "secret-code": "Секретний код",
   "secret-words": "Секретні слова",
   "select": "Обрати",
   "send": "Надіслати",
@@ -1088,6 +1087,7 @@
   "user-comments-hidden": "Коментарі цього користувача приховуються",
   "user-havent-posted-anything": "Користувач ще нічого не написав",
   "validating-access-request": "Перевірка запиту на доступ",
+  "verification-code": "Код підтвердження",
   "verify-signature": "Перевірити підпис",
   "video": "Відео",
   "video-internet": "Відео з Інтернету",
