--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -253,8 +253,8 @@
   "enable-reactions": "Разрешить реакции",
   "enter-blog-name": "Введите имя блога",
   "enter-name": "Введите имя...",
-  "enter-secret-code": "Введите секретный код",
   "enter-text-here": "Вводите текст тут...",
+  "enter-verification-code": "Введите код подтверждения",
   "expand": "Развернуть ↓",
   "expires": "Годен до:",
   "explore": "Обзор",
@@ -409,7 +409,7 @@
     "their-post": "свой пост",
     "your-post": "ваш пост"
   },
-  "invalid-secret-code": "Неверный секретный код",
+  "invalid-verification-code": "Неверный код подтверждения",
   "italic": "Курсив",
   "i-think-blog-hide": "Я считаю, что блог <b>{name}</b> следует скрыть.",
   "i-think-comment-hide": "Я считаю, что комментарий \"{heading}\" следует скрыть.",
@@ -703,7 +703,6 @@
     "people": "Люди",
     "postings": "Посты"
   },
-  "secret-code": "Секретный код",
   "secret-words": "Секретные слова",
   "select": "Выбрать",
   "send": "Отправить",
@@ -1088,6 +1087,7 @@
   "user-comments-hidden": "Комментарии этого пользователя скрываются",
   "user-havent-posted-anything": "Пользователь пока ничего не написал",
   "validating-access-request": "Проверка запроса на доступ",
+  "verification-code": "Код подтверждения",
   "verify-signature": "Проверить подпись",
   "video": "Видео",
   "video-internet": "Видео из Интернета",
