E-mail verification status page.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -129,6 +129,7 @@
   "complaint-status-colon": "Complaint status:",
   "compress-images": "Compress images",
   "confirm": "Confirm",
+  "confirmation-token-incorrect-expired": "Confirmation token is incorrect or expired",
   "confirm-password": "Confirm password",
   "connect": "Log In",
   "connected": "Logged in",
@@ -244,6 +245,7 @@
   "edit-post-title": "Edit Post",
   "e-mail": "E-mail",
   "email": "E-mail",
+  "email-address-confirmation": "E-mail address confirmation",
   "email-not-set": "Unfortunately, E-mail address for the blog <b>{location}</b> is not set, so automatic password reset is impossible. Please, contact your Moera provider or server owner to find alternative ways to reset the password.",
   "email-set": "E-mail address set",
   "emoji": "Emoji",
@@ -1142,6 +1144,7 @@
   "you-friends": "You are friends",
   "you-havent-posted-anything": "You haven't posted anything yet",
   "you-no-longer-subscribed": "You are no longer subscribed",
+  "your-email-address-confirmed": "Your e-mail address is successfully confirmed",
   "your-news": "Your news",
   "your-password": "Your password",
   "your-posts": "Your posts",
