--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -129,6 +129,7 @@
   "complaint-status-colon": "Stan skargi",
   "compress-images": "Kompresuj obrazy",
   "confirm": "Zatwierdzić",
+  "confirmation-token-incorrect-expired": "Token potwierdzający jest nieprawidłowy lub wygasły",
   "confirm-password": "Potwierdź hasło",
   "connect": "Zaloguj się",
   "connected": "Zalogowano",
@@ -244,6 +245,7 @@
   "edit-post-title": "Edytuj post",
   "e-mail": "E-mail",
   "email": "E-mail",
+  "email-address-confirmation": "Potwierdzenie adresu e-mail",
   "email-not-set": "Niestety, adres e-mail dla bloga <b>{location}</b> nie został ustawiony, więc automatyczne resetowanie hasła jest niemożliwe. Skontaktuj się z dostawcą Moera lub właścicielem serwera, aby znaleźć alternatywne sposoby resetowania hasła.",
   "email-set": "Adres e-mail ustawiony",
   "emoji": "Emoji",
@@ -1142,6 +1144,7 @@
   "you-friends": "Jesteście znajomymi",
   "you-havent-posted-anything": "Jeszcze nic nie opublikowałeś",
   "you-no-longer-subscribed": "Nie jesteś już subskrybentem",
+  "your-email-address-confirmed": "Twój adres e-mail został pomyślnie potwierdzony",
   "your-news": "Twoje aktualności",
   "your-password": "Twoje hasło",
   "your-posts": "Twoje posty",
