--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -129,6 +129,7 @@
   "complaint-status-colon": "Статус жалобы:",
   "compress-images": "Сжимать картинки",
   "confirm": "Одобрить",
+  "confirmation-token-incorrect-expired": "Токен подтверждения неверен или срок его действия истек",
   "confirm-password": "Подтверждение пароля",
   "connect": "Войти",
   "connected": "Вход выполнен",
@@ -244,6 +245,7 @@
   "edit-post-title": "Редактировать пост",
   "e-mail": "E-mail",
   "email": "Электронная почта",
+  "email-address-confirmation": "Подтверждение адреса электронной почты",
   "email-not-set": "К сожалению, адрес e-mail для блога <b>{location}</b> не был задан, поэтому автоматический сброс пароля невозможен. Пожалуйста, свяжитесь с вашим провайдером Moera или владельцем сервера, чтобы найти другие пути для сброса пароля.",
   "email-set": "Адрес электронной почты установлен",
   "emoji": "Эмодзи",
@@ -1142,6 +1144,7 @@
   "you-friends": "Вы друзья",
   "you-havent-posted-anything": "Вы пока ничего не написали",
   "you-no-longer-subscribed": "Вы больше не подписаны",
+  "your-email-address-confirmed": "Ваш адрес электронной почты успешно подтвержден",
   "your-news": "Ваши новости",
   "your-password": "Ваш пароль",
   "your-posts": "Ваши посты",
