--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -129,6 +129,7 @@
   "complaint-status-colon": "Статус скарги:",
   "compress-images": "Стискати картинки",
   "confirm": "Схвалити",
+  "confirmation-token-incorrect-expired": "Токен підтвердження недійсний або його строк закінчився",
   "confirm-password": "Підтвердження пароля",
   "connect": "Увійти",
   "connected": "Увійшли",
@@ -244,6 +245,7 @@
   "edit-post-title": "Редагувати пост",
   "e-mail": "E-mail",
   "email": "Електронна пошта",
+  "email-address-confirmation": "Підтвердження електронної адреси",
   "email-not-set": "На жаль, адреса e-mail для блогу <b>{location}</b> не була задана, тому автоматичне скидання пароля неможливе. Будь ласка, зв'яжіться з вашим провайдером Moera або власником сервера, щоб знайти інші шляхи для скидання пароля.",
   "email-set": "Адресу електронної пошти встановлено",
   "emoji": "Емодзі",
@@ -1142,6 +1144,7 @@
   "you-friends": "Ви друзі",
   "you-havent-posted-anything": "Ви ще нічого не написали",
   "you-no-longer-subscribed": "Ви більше не підписані",
+  "your-email-address-confirmed": "Вашу електронну адресу успішно підтверджено",
   "your-news": "Ваші новини",
   "your-password": "Ваш пароль",
   "your-posts": "Ваші пости",
