--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -131,6 +131,7 @@
   "confirm": "Одобрить",
   "confirmation-link-incorrect-expired": "Ссылка для подтверждения неверна или устарела",
   "confirm-password": "Подтверждение пароля",
+  "confirm-your-email-address": "Подтвердите ваш адрес электронной почты",
   "connect": "Войти",
   "connected": "Вход выполнен",
   "connect-home": "Вход",
@@ -320,6 +321,7 @@
   "how-often-blog-search": "Как часто ваш блог находили в Google и других поисковых системах за последнюю неделю?",
   "i": "Я",
   "i-agree": "Я {gender, select, female {согласна} other {согласен}}",
+  "if-not-received-check-spam": "Если вы не видите письмо во входящих, проверьте папку \"Спам\". Ссылка устареет через 15 минут.",
   "ignore": "Игнорировать",
   "image": "Картинка",
   "image-internet": "Картинка из Интернета",
@@ -1150,6 +1152,7 @@
   "your-posts": "Ваши посты",
   "your-profile": "Ваш профиль",
   "you-subscribed": "Вы подписаны",
+  "you-will-receive-confirm-email": "Скоро вы получите письмо для подтверждения вашего адреса электронной почты.",
   "zoom-in": "Увеличить",
   "zoom-out": "Уменьшить"
 }
