--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -131,6 +131,7 @@
   "confirm": "Схвалити",
   "confirmation-link-incorrect-expired": "Посилання для підтвердження невірне або застаріле",
   "confirm-password": "Підтвердження пароля",
+  "confirm-your-email-address": "Підтвердьте вашу електронну адресу",
   "connect": "Увійти",
   "connected": "Увійшли",
   "connect-home": "Вхід",
@@ -320,6 +321,7 @@
   "how-often-blog-search": "Як часто ваш блог знаходили в Google та інших пошукових системах за останній тиждень?",
   "i": "Я",
   "i-agree": "Я погоджуюсь",
+  "if-not-received-check-spam": "Якщо ви не бачите електронного листа у папці «Вхідні», перевірте папку «Спам». Посилання буде недійсним через 15 хвилин.",
   "ignore": "Ігнорувати",
   "image": "Картинка",
   "image-internet": "Картинка з Інтернету",
@@ -1150,6 +1152,7 @@
   "your-posts": "Ваші пости",
   "your-profile": "Ваш профіль",
   "you-subscribed": "Ви підписані",
+  "you-will-receive-confirm-email": "Незабаром ви отримаєте листа для підтвердження вашої електронної адреси.",
   "zoom-in": "Збільшити",
   "zoom-out": "Зменьшити"
 }
