Warning about a non-confirmed e-mail and confirmation button.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -501,6 +501,7 @@
   "not-accept-sheriff-governance": "Do not accept sheriff's governance",
   "not-accessible": "Not accessible",
   "not-allowed": "Not allowed",
+  "not-confirmed": "not confirmed",
   "note-complaints-public": "<b>Note:</b> All complaints to the sheriff are public. You can ask not to publish your complaint for some reason, but the final decision is made by the sheriff.",
   "no-text": "(no text)",
   "not-following-comments": "Not following comments",
@@ -711,6 +712,7 @@
   "select": "Select",
   "send": "Send",
   "send-request-delete-blog": "You have sent a request to delete your blog with all the data",
+  "sent-confirmation-email": "Sent the confirmation e-mail. Check your inbox",
   "set-as-default": "Set as default",
   "set-by-admin": "set by admin",
   "set-by-post-owner": "set by post author",
