--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -501,6 +501,7 @@
   "not-accept-sheriff-governance": "Nie akceptuj rządów szeryfa",
   "not-accessible": "Niedostępny",
   "not-allowed": "Nie dozwolone",
+  "not-confirmed": "niepotwierdzony",
   "note-complaints-public": "<b>Uwaga:</b> wszystkie skargi kierowane do szeryfa są publiczne. Możesz poprosić o niepublikowanie Twojej skargi z jakiegokolwiek powodu, ale ostateczna decyzja należy do szeryfa.",
   "no-text": "(brak tekstu)",
   "not-following-comments": "Nie śledzi komentarzy",
@@ -711,6 +712,7 @@
   "select": "Wybierz",
   "send": "Wyślij",
   "send-request-delete-blog": "Wysłałeś prośbę o usunięcie swojego bloga ze wszystkimi danymi",
+  "sent-confirmation-email": "Wysłałem e-mail potwierdzający. Sprawdź swoją skrzynkę odbiorczą",
   "set-as-default": "Ustaw jako domyślne",
   "set-by-admin": "ustawione przez administratora",
   "set-by-post-owner": "ustawione przez autora posta",
