--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -501,6 +501,7 @@
   "not-accept-sheriff-governance": "Не одобрил присмотр шерифа",
   "not-accessible": "Недоступно",
   "not-allowed": "Недопустимо",
+  "not-confirmed": "не подтвержден",
   "note-complaints-public": "<b>Примечание:</b> Все жалобы шерифу являются общедоступными. Вы можете попросить не публиковать вашу жалобу по какой-либо причине, но окончательное решение принимает шериф.",
   "no-text": "(без текста)",
   "not-following-comments": "Не слежу за комментариями",
@@ -711,6 +712,7 @@
   "select": "Выбрать",
   "send": "Отправить",
   "send-request-delete-blog": "Вы отправили запрос на удаление своего блога со всей информацией",
+  "sent-confirmation-email": "Отправлено подтверждение по электронной почте. Проверьте ваш почтовый ящик",
   "set-as-default": "Сделать значением по умолчанию",
   "set-by-admin": "установлено администратором",
   "set-by-post-owner": "установлено автором поста",
