--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -501,6 +501,7 @@
   "not-accept-sheriff-governance": "Не схвалив нагляд шерифа",
   "not-accessible": "Недоступно",
   "not-allowed": "Неприпустимо",
+  "not-confirmed": "не підтверджений",
   "note-complaints-public": "<b>Примітка:</b> Усі скарги шерифові є відкритими. Ви можете попросити не публікувати вашу скаргу з якоїсь причини, але остаточне рішення приймає шериф.",
   "no-text": "(без текста)",
   "not-following-comments": "Не слідкую за коментарями",
@@ -711,6 +712,7 @@
   "select": "Обрати",
   "send": "Надіслати",
   "send-request-delete-blog": "Ви надіслали запит на видалення свого блогу з усіма даними",
+  "sent-confirmation-email": "Надіслано підтвердження електронною поштою. Перевірте свою скриньку",
   "set-as-default": "Зробити значенням за замовчуванням",
   "set-by-admin": "встановлено адміністратором",
   "set-by-post-owner": "встановлено автором поста",
